# mana

./: .gitattributes  .gitignore  .tool-versions  CI_RECOVERY_PLAN.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  PERFORMANCE_ANALYSIS.md  README.md  ROADMAP.md  TODO.md  docker-compose.yml  mix.exs  shell.nix  test_optimism_integration.exs  test_optimism_simple.exs
.circleci/: config.yml
.claude/: CLAUDE.md  settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codecov.yml  codeql.yml  consensus-spec-tests.yml  property-testing.yml
apps/blockchain/: mix.exs
apps/cli/: mix.exs
apps/common/: mix.exs
apps/evm/: mix.exs
apps/ex_wire/: mix.exs
apps/ex_wire/native/zk_nif/: Cargo.toml
apps/ex_wire/native/zk_nif/src/: lib.rs
apps/exth_crypto/: mix.exs
apps/jsonrpc2/: mix.exs
apps/mana/: mix.exs
apps/merkle_patricia_tree/: README.md  mix.exs
apps/merkle_patricia_tree/native/verkle_crypto/: Cargo.toml
apps/merkle_patricia_tree/native/verkle_crypto/src/: batch.rs  commitment.rs  curve.rs  lib.rs  proof.rs
chains/: mainnet.json
config/: config.exs  development.yml  mana.yml  production_hardening.exs  schema.yml  test.yml
docs/: CONFIGURATION.md  INDEX.md  README.md
docs/achievements/: GENSERVER_REFACTORING_COMPLETE.md  GENSERVER_REFACTORING_FINAL.md  IDIOMATIC_ELIXIR_ACHIEVEMENT.md  REFACTORING_REPORT.md
docs/architecture/: ANTIDOTEDB_OPERATIONS.md  LAYER2_SECURITY_AUDIT.md  VERKLE_TREES.md
docs/archive/: CLEANUP_NOTES.md
docs/deployment/: COMPLIANCE_SYSTEM.md  HSM_QUICK_SETUP.md  MIGRATION_PLAN_V2.md  PRODUCTION_DEPLOYMENT_V2.md
monitoring/: README.md  alertmanager.yml  docker-compose.monitoring.yml  docker-compose.yml  prometheus.yml
scripts/: antidote_cluster.sh  deploy_layer2_testnet.sh  fix_arm64_compatibility.sh  flow_benchmark.exs  simple_p2p_test.exs  start-monitoring.sh  test_local_geth.exs  test_p2p_connection.exs
(+440 files in other folders)
