[package]
name = "zk_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "zk_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29.1"
ark-std = { version = "0.4", features = ["parallel"], optional = true }
ark-ec = { version = "0.4", optional = true }
ark-ff = { version = "0.4", optional = true }
ark-poly = { version = "0.4", optional = true }
ark-groth16 = { version = "0.4", optional = true }
ark-bn254 = { version = "0.4", optional = true }
ark-bls12-381 = { version = "0.4", optional = true }
rayon = { version = "1.7", optional = true }
rand = "0.8"
sha2 = "0.10"
blake3 = "1.4"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific optimizations
accelerate-src = "0.3"

[features]
default = []
arkworks = ["ark-std", "ark-ec", "ark-ff", "ark-poly", "ark-groth16", "ark-bn254", "ark-bls12-381"]
parallel = ["ark-std/parallel", "rayon"]