[package]
name = "verkle_crypto"
version = "0.1.0"
authors = ["Mana Ethereum Team"]
edition = "2021"

[lib]
name = "verkle_crypto"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29.1"
# Using ark-ed-on-bls12-381-bandersnatch for Bandersnatch curve
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ff = "0.4.2"       # Field arithmetic
ark-ec = "0.4.2"       # Elliptic curve operations
ark-serialize = "0.4.2"
ark-std = "0.4.0"
hex = "0.4.3"
sha2 = "0.10.8"
blake3 = "1.5.0"
rayon = { version = "1.8.0", optional = true }  # Parallel processing for batch operations
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[features]
default = []
parallel = ["rayon"]